# Pedigree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/modules/: HandleLLVMDependency.cmake
doc/: CMakeLists.txt  doxygen.cfg.in
include/: CDG.hpp  CDGBuilder.hpp  CDGPass.hpp  Config.hpp.in  Converter.hpp  DAMDGBuilder.hpp  DDG.hpp  DDGBuilder.hpp  DDGPass.hpp  DataDependenceGraph.hpp  DataDependenceGraphPass.hpp  DataDependenceGraphPrinter.h  Debug.hpp  Dependence.hpp  GenericDependenceGraph.hpp  MDALocalMDGBuilder.hpp  MDASimpleMDGBuilder.hpp  MDG.hpp  MDGPass.hpp  Pedigree.hpp  PedigreePass.hpp  PostDominanceFrontier.hpp  Util.hpp  Utils.hpp
include/Analysis/: AnalysisScope.hpp  CDG.hpp  CDGBuilder.hpp  CDGraph.hpp  CDGraphBuilder.hpp  DAMDGBuilder.hpp  DAMDGraphBuilder.hpp  DDG.hpp  DDGBuilder.hpp  DDGraph.hpp  DDGraphBuilder.hpp  DependenceGraphs.hpp  MDALocalMDGBuilder.hpp  MDALocalMDGraphBuilder.hpp  MDG.hpp  MDGraph.hpp  PDG.hpp  PDGBuilder.hpp  PDGraph.hpp  PDGraphBuilder.hpp  PostDominanceFrontier.hpp
include/Analysis/Creational/: CDGraphBuilder.hpp  DAMDGraphBuilder.hpp  DDGraphBuilder.hpp  MDALocalMDGraphBuilder.hpp  MDAMDGraphBuilder.hpp  PDGraphBuilder.hpp
include/Analysis/DependenceInfo/: BasicDependenceInfo.hpp  DependenceInfoDOTTraits.hpp  NoDependenceInfo.hpp  Traits.hpp
include/Analysis/Graphs/: CDGraph.hpp  DDGraph.hpp  DependenceGraphs.hpp  MDGraph.hpp  PDGraph.hpp
include/Analysis/Info/: EmptyInfo.hpp
include/Analysis/Info/EdgeInfo/: BasicDependenceInfo.hpp  DependenceInfoDOTTraits.hpp  EdgeInfoDOTTraits.hpp
include/Analysis/Info/NodeInfo/: EmptyNodeInfo.hpp  NodeInfoDOTTraits.hpp  UIDInfo.hpp
include/Analysis/Operations/: AssignNodeUID.hpp  DFSEnumerate.hpp
include/Analysis/Passes/: CDGPass.hpp  CDGraphPass.hpp  DDGPass.hpp  DDGraphPass.hpp  MDGPass.hpp  MDGraphPass.hpp  PDGPass.hpp  PDGraphPass.hpp  PedigreePass.hpp
include/Analysis/Units/: DOTUnitTraits.hpp  UnitDOTTraits.hpp  UnitTraits.hpp  Units.hpp
include/Pedigree/: Debug.hpp  Util.hpp
include/Pedigree/Analysis/: AnalysisScope.hpp  Hazards.hpp  PostDominanceFrontier.hpp
include/Pedigree/Analysis/Creational/: CDGraphBuilder.hpp  DAMDGraphBuilder.hpp  DDGraphBuilder.hpp  MDAMDGraphBuilder.hpp  PDGraphBuilder.hpp
include/Pedigree/Analysis/Graphs/: CDGraph.hpp  DDGraph.hpp  DependenceGraphs.hpp  MDGraph.hpp  PDGraph.hpp
include/Pedigree/Analysis/Info/: EmptyInfo.hpp
include/Pedigree/Analysis/Operations/: AssignNodeUID.hpp
include/Pedigree/Analysis/Passes/: CDGraphPass.hpp  DDGraphPass.hpp  MDGraphPass.hpp  PDGraphPass.hpp
include/Pedigree/Analysis/Units/: UnitDOTTraits.hpp  UnitTraits.hpp  Units.hpp
include/Pedigree/Exchange/: MetadataReader.hpp
include/Pedigree/Support/: FileSystem.hpp  GenericDependenceGraph.hpp  GenericDependenceGraphEdgeIterator.hpp  GenericDependenceNode.hpp  GraphConverter.hpp  MemInstTraversals.hpp
include/Pedigree/Support/Traits/: LLVMAnalysisGraphTraits.hpp  LLVMDOTGraphTraitsHelperBase.hpp  LLVMGraphTraitsHelperBase.hpp  TypeTraits.hpp
include/Pedigree/Support/Utils/: InstIterator.hpp  UniformObjectAccess.hpp  UnitConverters.hpp
include/Support/: GenericDependenceGraph.hpp  GenericDependenceGraphEdgeIterator.hpp  GenericDependenceNode.hpp  GraphAdaptor.hpp  GraphConverter.hpp
include/Support/Traits/: DOTUnitTraits.hpp  LLVMAnalysisGraphTraits.hpp  LLVMDOTGraphTraitsHelper.hpp  LLVMDOTGraphTraitsHelperBase.hpp  LLVMGraphTraitsHelperBase.hpp  TypeTraits.hpp  Unit.hpp  UnitTraits.hpp
include/Support/Utils/: InstIterator.hpp  TypeTraits.hpp  UniformObjectAccess.hpp  UnitAdaptors.hpp  UnitConverters.hpp
include/pedigree/: Debug.hpp  Util.hpp
include/pedigree/Analysis/: AnalysisScope.hpp  PostDominanceFrontier.hpp
include/pedigree/Analysis/Creational/: CDGraphBuilder.hpp  DAMDGraphBuilder.hpp  (+3 more)
include/pedigree/Support/: GenericDependenceGraph.hpp  GenericDependenceGraphEdgeIterator.hpp  GenericDependenceNode.hpp  GraphConverter.hpp
include/traits/: Unit.hpp
lib/: CDGPass.cpp  CDGPrinterPass.cpp  DDGPass.cpp  DDGPrinter.cpp  DDGPrinterPass.cpp  DataDependenceGraphPass.cpp  Debug.cpp  MDGPass.cpp  MDGPrinterPass.cpp  PedigreePass.cpp  RegisterPasses.cpp
lib/Analysis/: DependenceGraphs.cpp  Hazards.cpp
lib/Analysis/Graphs/: DependenceGraphs.cpp
lib/Analysis/Passes/: CDGPass.cpp  CDGPrinterPass.cpp  CDGraphPass.cpp  CDGraphPrinterPass.cpp  DDGPass.cpp  DDGPrinterPass.cpp  DDGraphPass.cpp  DDGraphPrinterPass.cpp  GraphPassCommandLineOptions.cpp  MDGPass.cpp  MDGPrinterPass.cpp  MDGraphPass.cpp  MDGraphPrinterPass.cpp  PDGPass.cpp  PDGraphPass.cpp  PDGraphPrinterPass.cpp  PedigreePass.cpp
lib/Support/: FileSystem.cpp
share/cmake/: config-extra.cmake.in  config.cmake.in
tests/: CMakeLists.txt  function-identity.ll  lenherr2008_fig01.ll  lenherr2008_fig04.ll  lit.cfg.in  mdamdgbuilder_scope_bug01.ll  rar.ll
tests/data/expected/: lenherr2008_fig01.dot  lenherr2008_fig04.dot  mdamdgbuilder_scope_bug01.dot  rar_mdg.dot
tests/data/src/: lenherr2008_fig01.c  lenherr2008_fig04.c  mdamdgbuilder_scope_bug01.c
tests/scripts/: check_graph_iso.py
unittests/: CDGTests.cpp  CDGraphTests.cpp  CMakeLists.txt  DDGTests.cpp  DDGraphTests.cpp  GenericDependenceGraphTests.cpp  PostDominanceFrontierTests.cpp  TestPedigreeOpt.cpp
unittests/data/: exit.ll  hpc4pc_book_fig321.ll  hpc4pc_book_fig37.ll  mdg_test01.ll  single.ll  test01.ll  unreachable_return.ll  whalebook_fig81.ll  whalebook_fig821.ll  whalebook_fig85.ll
unittests/data/src/: exit.c  hpc4pc_book_fig321.c  hpc4pc_book_fig37.c  single.c  unreachable_return.c  whalebook_fig81.c  whalebook_fig821.c  whalebook_fig85.c
unittests/include/: TestCommon.hpp  TestIRAssemblyParser.hpp
utils/scripts/: clang-format.sh  compile2llvmir.sh  run_unittests_with_valgrind.sh.in
utils/scripts/graphviz/: graphviz_postdom_frontier_print.py  graphviz_scc_print.py
utils/scripts/run/: run-pdg-dg-dot.sh.in  run-pdg-dot.sh.in
utils/scripts/sanitizers/: run_unittests_with_asan.sh.in  run_unittests_with_msan.sh.in
utils/scripts/travis/: build-gtest-libcxx.sh
(+35 files in other folders)
